# swagger/docs.swagger.json
@@ -98,7 +98,7 @@
               "$ref": "#/definitions/RegisterResponse"
             }
           },
-          "203": {
+          "201": {
             "description": "Created",
             "schema": {
               "$ref": "#/definitions/RegisterResponse"
@@ -584,6 +584,51 @@
         ]
       }
     },
+    "/api/v1/clusters": {
+      "get": {
+        "summary": "Получение списка локальных кластеров",
+        "description": "Выполняет получение списка локальных кластеров сервера 1С Предприятия",
+        "operationId": "ClustersService_GetClusters",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetClustersResponse"
+            }
+          },
+          "403": {
+            "description": "User does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        },
+        "tags": [
+          "Clusters"
+        ],
+        "x-headers": [
+          {
+            "in": "header",
+            "name": "x-application",
+            "scheme": {
+              "pattern": "^[0-9A-F]{8}-[0-9A-F]{4}-4[0-9A-F]{3}-[89AB][0-9A-F]{3}-[0-9A-F]{12}$",
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
     "/api/v1/login": {
       "post": {
         "summary": "Выполняет вход в систему и возвращает токены доступа",
@@ -727,41 +772,6 @@
           {
             "AdminAuth": []
           }
-        ]
-      }
-    },
-    "/clusters": {
-      "get": {
-        "summary": "Выполняет получение списка кластеров клиентая",
-        "description": "Получение списка кластеров клиентая",
-        "operationId": "ClustersService_GetClusters",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/GetClustersResponse"
-            }
-          },
-          "403": {
-            "description": "User does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Resource does not exist.",
-            "schema": {
-              "type": "string",
-              "format": "string"
-            }
-          },
-          "500": {
-            "description": "Server error",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          }
-        },
-        "tags": [
-          "Clusters"
         ]
       }
     },
